# giskard-skills

./: AGENTS.md  README.md
.claude-plugin/: plugin.json
oss/checks/: ARCHITECTURE.md
oss/checks/rag-evaluator/: SKILL.md
oss/checks/rag-evaluator/example-agent/: .env.example  .gitignore  COVERAGE.md  pyproject.toml  run_suite.py
oss/checks/rag-evaluator/example-agent/eval/: scenarios.py  test_retrieval_guardrails.py  test_suite_pytest.py
oss/checks/rag-evaluator/example-agent/sample_kb/: data-retention.md  deployment.md  getting-started.md  pricing.md  refund-policy.md
oss/checks/rag-evaluator/example-agent/scripts/: deploy.sh  run_eval.sh
oss/checks/rag-evaluator/example-agent/src/: agent.py  cli.py  kb.py  retriever.py
oss/checks/references/: api-reference-core.md  checks-catalog-core.md  doc-authoring.md  error-analysis.md  eval-lifecycle.md  evaluator-skill-shell.md  generated-code-rules.md  giskard-how-to.md  information-gathering.md  iterative-eval-loop.md  judge-calibration.md  multi-turn-scenarios.md  test-input-generation-core.md  (+1 more)
oss/checks/text2sql-evaluator/example-agent/: .env.example  .gitignore  COVERAGE.md  pyproject.toml  run_suite.py
oss/checks/text2sql-evaluator/example-agent/eval/: check_helpers.py  run_eval.py  scenarios.py  test_check_helpers.py  test_sql_guardrails.py  test_suite_pytest.py
oss/checks/text2sql-evaluator/example-agent/sample_data/: init_db.sql
oss/checks/text2sql-evaluator/example-agent/scripts/: deploy.sh  run_eval.sh
oss/checks/text2sql-evaluator/example-agent/src/: agent.py  cli.py  schema.py  sql_tools.py
(+31 files in other folders)
