[project]
name = "giskard-rag-example"
version = "0.1.0"
description = "Reference RAG agent for giskard rag-evaluator skill"
requires-python = ">=3.12"
dependencies = [
    "giskard-checks>=1.0.2b3",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
prerelease = "allow"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
